--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc && tsc-alias",
     "start:dev": "NODE_ENV=development nodemon --exec npx ts-node -r tsconfig-paths/register ./src/server.ts",
-    "start:prod": "node ./dist/server.js",
+    "start:prod": "NODE_ENV=production node ./dist/server.js",
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:create": "npm run typeorm migration:create ./src/database/migrations/$npm_config_name",
     "migration:generate": "npm run build && npx typeorm migration:generate ./src/database/migrations/migrations -d ./dist/database/db.datasource.js",
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "config": "^3.3.11",
@@ -34,6 +35,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "helmet": "^7.1.0",
+    "http-status-codes": "^2.3.0",
     "inversify": "^6.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
